# AIMiddlePlatform

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.gpu  README.md  alembic.ini  all_req.txt  build_req.txt  bus_b64.txt  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  request_body.txt  requirements.txt
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0ccd4b670e4f_initial_tables.py  263d21436bf7_initial.py  5c8e3a1b2d0f_add_rejection_reason.py  c75bb05a3367_add_rule_engine_tables.py
config/: default.yaml  dev.yaml  production.yaml
data/: aimp.db
deploy/: ci-worker.sh  docker-compose-gitea.yml  docker-compose-runner.yml  install-runner.sh  install_gitea.sh  nginx.conf  poll-deploy.sh  setup_repo.sh
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  redis-deployment.yaml  service.yaml  worker-deployment.yaml
docs/: aimp-architecture.html  aimp-flow.html  aimp-seq-agentpath.html  aimp-seq-asyncpath.html  aimp-seq-fastpath.html  api-usage.md  offline-deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
scripts/: benchmark_load.py  check_env.py  compose_smoke_test.py  deploy_123.py  deploy_123_final.py  deploy_123_fix_env.py  deploy_123_v2.py  deploy_123_v3.py  deploy_compose_123.sh  deploy_fix.py  deploy_recreate.py  deploy_repair.py  deploy_validate_remote.sh  docker_entrypoint.sh  download_models.py  download_security_models.py  final_check.py  generate_test_model.py  list_routes.py  remote_test_runner.py  run_remote_validation.py  ssh_helper.py  test_endpoints.py
src/: main.py  worker.py
src/agent/: agent.py  agent_config.py  client.py  health.py  orchestrator.py  tools.py
src/aimiddleplatform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: app.py  deps.py
src/cache/: frame_hasher.py  result_cache.py
src/core/: config.py  config_manager.py  database.py  db_url.py  redis_client.py  schemas.py  security.py  storage.py
src/data/: annotator.py  cleaner.py  collector.py  pipeline.py
src/frame_preprocessor/: adaptive_sampler.py  processor.py  quality_filter.py  yolo_world.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ingestion/: __init__.py  dynamic_fps.py  frame_extractor.py  gb28181.py  (+6 more)
tests/: conftest.py  test_adaptive_sampler.py  test_admin_agent.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_logs.py  test_admin_models.py  test_admin_notifications.py  test_admin_pipelines.py  test_admin_rules_api.py  test_admin_traces.py  test_agent.py  test_agent_cache.py  test_aggregate_handler.py  test_analyze_endpoint.py  test_api.py  test_api_routes.py  test_ascend_adapter.py  test_async_analyze.py  test_cambricon_adapter.py  test_condition_handler.py  test_config.py  test_config_manager.py  test_dag.py  test_data_collection.py  test_data_pipeline.py  test_database.py  test_db_url.py  test_e2e_fakeredis.py  test_e2e_phase1.py  test_e2e_pipeline.py  test_executor_async.py  test_fast_path.py  test_frame_hasher.py  test_frame_preprocessor.py  test_gb28181.py  test_inference.py  test_inference_integration.py  test_log_buffer.py  test_model_package_manager.py  (+29 more)
(+179 files in other folders)
