[project]
name = "aimiddleplatform"
version = "0.1.0"
description = "AI Algorithm Scheduling Middle Platform - 大小模型协同的 CV 算法调度中台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
