[project]
name = "aimiddleplatform"
version = "0.1.0"
description = "AI Algorithm Scheduling Middle Platform - 大小模型协同的 CV 算法调度中台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.10.0.84",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "minio>=7.2.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "onnx>=1.22.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/adapters/downloader.py",
    "src/monitoring/*",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aimp-model = "src.models.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N", "I001"]
